<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    android:orientation="vertical"
    tools:context=".AuthenticationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        android:padding="10dp">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/mobile_otp" />
        <TextView
            android:textSize="24sp"
            android:fontFamily="@font/poppins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/verification_code_sent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_rounded_corner"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTv"
            android:text="Ashish Singh"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/phoneNumberSent"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:text="@string/enter_code"
            android:textColor="@color/themeColor"

            />

        <com.chaos.view.PinView
            android:id="@+id/PinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:cursorVisible="true"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:itemBackground="@color/white"
            android:textColor="@color/black"
            app:cursorColor="@color/white"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="45dp"
            app:itemRadius="5dp"
            app:itemWidth="45dp"
            app:lineColor="@color/black" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_button"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:shadowColor="@color/themeColor"
            android:shadowDx="6"
            android:shadowDy="6"
            android:text="@string/verify"
            android:onClick="verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>